# IndustrialOptimizer

./: .gitignore  README.md  pyproject.toml
bench/: README.md  run_benchmark.py
docs/: formulation.md  modeling_note.md
instances/: sample.json
plots/: README.md  plot_bnb.py
src/industrial_optimizer/: __init__.py  decode.py  demo.py  feasibility.py  generator.py  io.py  milp.py  models.py  solver.py
tests/: test_benchmark_smoke.py  test_decode.py  test_feasibility.py  test_generator.py  test_io.py  test_milp.py  test_solver.py
viz/: README.md
